Fix icon positioning by removing padding and using center alignment with 70% size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,12 +400,17 @@
     display: inline-block !important;
     width: 29px !important;
     height: 29px !important;
-    padding: 5px !important;
-    box-sizing: border-box !important;
     background-color: transparent !important;
     background-repeat: no-repeat !important;
-    background-position: 50% 50% !important;
-    background-size: contain !important;
+    background-position: center !important;
+    background-size: 70% !important;
+}
+
+/* Override any specific positioning from Mapbox */
+.mapboxgl-ctrl-zoom-in .mapboxgl-ctrl-icon,
+.mapboxgl-ctrl-zoom-out .mapboxgl-ctrl-icon,
+.mapboxgl-ctrl-compass .mapboxgl-ctrl-icon {
+    background-position: center center !important;
 }
 
 .mapboxgl-ctrl-group button:hover {
